--- a/hgamebrick.cabal
+++ b/hgamebrick.cabal
@@ -14,12 +14,11 @@ maintainer:          codehero@nerdpol.ch
 build-type:          Simple
 -- extra-source-files:  
 cabal-version:       >=1.10
-                     
+
 executable hgamebrick
   main-is:             Main.hs
   -- other-modules:       
   other-extensions:    OverloadedStrings, TemplateHaskell
-  build-depends:       base >=4.8 && <4.9, lens >=4.12 && <4.13, mtl >=2.2 && <2.3, text >=1.2 && <1.3, brick >=0.1 && <0.2, vty >=5.3 && <5.4, sqlite-simple >=0.4 && <0.5, aeson >=0.9 && <0.10, bytestring >=0.10 && <0.11, process >=1.2 && <1.3, directory >=1.2 && <1.3
+  build-depends:       base >=4.7 && <4.9, lens >=4.12 && <4.13, mtl >=2.2 && <2.3, text >=1.2 && <1.3, brick >=0.1 && <0.2, vty >=5.3 && <5.4, sqlite-simple >=0.4 && <0.5, aeson >=0.9 && <0.10, aeson-pretty >=0.7 && <0.8, bytestring >=0.10 && <0.11, process >=1.2 && <1.3, directory >=1.2 && <1.3
   -- hs-source-dirs:      
   default-language:    Haskell2010
-  ghc-options: -threaded
